# tamil-panchang-api

./: .gitignore  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_SSE_FIX_SUMMARY.md  README-GITHUB.md  README.md  REPOSITORY_SEPARATION_PLAN.md  SECURITY.md  app.py  deploy_instructions.txt.backup  docker-compose.private.yml  docker-compose.standalone.yml  docker-compose.yml  mcp_server.py  mcp_server_stdio.py  pyproject.toml  requirements.txt  supervisord.conf  test_api.py  test_endpoints.sh  test_mcp.py  test_mcp_client.py  test_mcp_connection.py  test_production_mcp.py  test_sse_endpoint.py  validate_mcp_config.py
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: docker-build.yml  tests.yml
scripts/: README.md  create_private_repo.sh  prepare_public_repo.sh  sync_from_public.sh  sync_to_public.sh
