[project]
name = "tamil-panchang-api"
version = "1.5.0"
description = "Self-hosted Tamil Panchang REST API and MCP server"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Karthikeyan N", email = "karthiknitt@gmail.com" }]
readme = "README.md"
keywords = ["panchang", "tamil", "astronomy", "mcp", "fastapi"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.7.2,<3.0.0",
    "pyswisseph==2.10.3.2",
    "python-multipart>=0.0.6",
    "mcp>=1.0.0,<2.0.0",
    "fastmcp>=0.2.0,<4.0.0",
    "httpx>=0.27.0",
    "supervisor>=4.2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP"]
ignore = [
    "S101",   # allow assert in tests
    "S113",   # allow requests without timeout in tests (we added it explicitly)
]
